2005-10-11  Pat Thoyts <patthoyts@users.sourceforge.net>

	* loggerUtils.tcl: Avoid use of %G in time formats. (not
	                   widely supported in C libraries)

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-28  Andreas Kupries <andreask@activestate.com>

	* loggerAppender.tcl: Integrated the formatter/appender utilities
	* loggerAppender.man: provided by [SF Tcllib 1267636]. Created
	* loggerUtils.tcl:    doctools based documentation. Fixed mis-
	* loggerUtils.man:    spellings. Moved the utility code into
	* loggerUtils.test:   the namespace "logger::utils". Added the
	* pkgIndex.tcl:       new packages to the package index.

2005-09-23  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.man : Added section about logprocs and their effect
	  on the callstack, including a small example.
	  
2005-05-07  Michael Schlenker <mic42@users.sourceforge.net>
	
	* logger.tcl  :
	  logger.test :
	  pkgIndex.tcl: Added more tests to the new lvlchangeproc and
	  provided a sane default to the no-op proc to fix a bug reported
	  by Hemang Lavana. Callbacks are now checked to exist before they
	  are allowed or used. Added tests for these checks. 
	  Raised package version to 0.6.1.

2005-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Synchronized indexed vs. provided versions of
	  logger.

2005-03-04  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.test : 
	  logger.tcl  :
	  logger.man  : Added a test (13.7) for a small glitch in the
	  fix for bug [1102131]. logprocs could be called with
	  too many arguments. Added new lvlchangeproc callback command
	  including tests and docs. 
	  
2005-02-18  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.test : Added tests for the clean callstack (14.x)
	  to satisfy RFE 1120152. logger should not appear in the
	  callstacks of the logprocs from now on.
	  